# ifsn-logreg-benchmarks

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/: RELEASE_CHECKLIST.md
.github/workflows/: ci.yml
docs/: benchmark_protocol.md  reproducibility.md  research_note.md  technical_note.md
experiments/: compare_sampling_schemes.py  compare_to_sklearn.py
results/: README.md
results/full/: runs.csv  summary.csv  summary.md
results/smoke/: dataset_manifest.json  runs.csv  summary.csv  summary.md
src/ifsn_logistic/: __init__.py  base.py  benchmarking.py  config.py  datasets.py  diagnostics.py  estimator.py  losses.py  math_utils.py  sampling.py  solver_reference.py  solver_safe.py
src/ifsn_logistic/benchmarks/: __init__.py  data.py  env.py  inference.py  preprocess.py  reporting.py  run.py
tests/: conftest.py  test_adversarial.py  test_benchmark_data.py  test_benchmark_runner.py  test_convergence_smoke.py  test_estimator_api.py  test_gradient.py  test_inference.py  test_reproducibility.py  test_sampling.py  test_shapes.py  test_sigmoid_and_q.py  test_solver_reference.py  test_solver_safe.py
tests/fixtures/: mushroom_sample.csv
