[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifsn-sequential-subsampling"
version = "0.2.0"
description = "Experimental benchmark artifact for sequential subsampling logistic regression."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "IFSN Contributors"},
]
keywords = ["logistic-regression", "subsampling", "newton-method", "optimization", "benchmarking"]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
comparison = [
    "scikit-learn>=1.3",
]
benchmark = [
    "numpy==1.26.4",
    "scipy==1.11.4",
    "scikit-learn==1.4.2",
    "pandas==2.2.3",
]

[project.scripts]
ifsn-benchmark = "ifsn_logistic.benchmarks.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
]
addopts = "-v --tb=short"
